slave: List users directly via DBus, don't use libaccountsservice

libaccountsservice has this concept of "loaded" which refers to the
seat, but in this context we don't need to be in an active seat.

This fixes the gnome-initial-setup startup conditions in gnome-ostree.

https://bugzilla.gnome.org/show_bug.cgi?id=697594